Relationship Index is without data from database

--- a/Soft/Views/CourseAssignments/Create.cshtml
+++ b/Soft/Views/CourseAssignments/Create.cshtml
@@ -5,4 +5,4 @@
     Layout = Layouts.Create;
 }
 
-<partial name="_EditCourseAssignment" model="@Model" />
+<partial name="_EditCourseAssignments" model="@Model" />
