--- a/Soft/Views/CourseAssignments/Delete.cshtml
+++ b/Soft/Views/CourseAssignments/Delete.cshtml
@@ -5,4 +5,4 @@
     Layout = Layouts.Delete;
 }
 
-<partial name="_ViewCourseAssignment" model="@Model" />
+<partial name="_ViewCourseAssignments" model="@Model" />
