--- a/Soft/Views/CourseAssignments/Details.cshtml
+++ b/Soft/Views/CourseAssignments/Details.cshtml
@@ -5,4 +5,4 @@
     Layout = Layouts.Details;
 }
 
-<partial name="_ViewCourseAssignment" model="@Model" />
+<partial name="_ViewCourseAssignments" model="@Model" />
