--- a/Soft/Views/Courses/_EditCourses.cshtml
+++ b/Soft/Views/Courses/_EditCourses.cshtml
@@ -5,13 +5,12 @@
 @{
     ViewData[Datas.Title] = nameof(Course);
     ViewData[Datas.ItemID] = Model?.ID;
-    var departments = (IEnumerable<SelectListItem>)ViewBag.Departments;
 }
 
 @Html.EditItem(x => x.Number)
 @Html.EditItem(x => x.Name)
 @Html.EditItem(x => x.Credits)
-@Html.SelectItem(x => x.DepartmentID, departments)
+@Html.SelectItem(x => x.DepartmentID, "departments")
 @Html.EditItem(x => x.Code)
 @Html.EditItem(x => x.Description)
 @Html.EditItem(x => x.ValidFrom)
