--- a/Soft/Views/Enrollments/Create.cshtml
+++ b/Soft/Views/Enrollments/Create.cshtml
@@ -6,5 +6,4 @@
     Layout = Layouts.Create;
 }
 
-<partial name="_EditEnrollment" model="@Model" />
-
+<partial name="_EditEnrollments" model="@Model" />
