--- a/Soft/Views/Enrollments/Delete.cshtml
+++ b/Soft/Views/Enrollments/Delete.cshtml
@@ -6,4 +6,4 @@
     Layout = Layouts.Delete;
 }
 
-<partial name="_ViewEnrollment" model="@Model" />
+<partial name="_ViewEnrollments" model="@Model" />
