--- a/Soft/Views/OfficeAssignments/Create.cshtml
+++ b/Soft/Views/OfficeAssignments/Create.cshtml
@@ -5,4 +5,4 @@
     Layout = Layouts.Create;
 }
 
-<partial name="_EditOfficeAssignment" model="@Model" />
+<partial name="_EditOfficeAssignments" model="@Model" />
