--- a/Soft/Views/OfficeAssignments/Delete.cshtml
+++ b/Soft/Views/OfficeAssignments/Delete.cshtml
@@ -6,4 +6,4 @@
     Layout = Layouts.Delete;
 }
 
-<partial name="_ViewOfficeAssignment" model="@Model" />
+<partial name="_ViewOfficeAssignments" model="@Model" />
