--- a/Soft/Views/OfficeAssignments/Details.cshtml
+++ b/Soft/Views/OfficeAssignments/Details.cshtml
@@ -5,4 +5,4 @@
     Layout = Layouts.Details;
 }
 
-<partial name="_ViewOfficeAssignment" model="@Model" />
+<partial name="_ViewOfficeAssignments" model="@Model" />
