--- a/Soft/Views/OfficeAssignments/Edit.cshtml
+++ b/Soft/Views/OfficeAssignments/Edit.cshtml
@@ -9,4 +9,4 @@
 <input type="hidden" asp-for="ID" />
 @Html.ViewItem(x => x.ID)
 
-<partial name="_EditOfficeAssignment" model="@Model" />
+<partial name="_EditOfficeAssignments" model="@Model" />
