--- a/Soft/Views/OfficeAssignments/_EditOfficeAssignments.cshtml
+++ b/Soft/Views/OfficeAssignments/_EditOfficeAssignments.cshtml
@@ -5,10 +5,9 @@
 @{
     ViewData[Datas.Title] = nameof(OfficeAssignment);
     ViewData[Datas.ItemID] = Model?.ID;
-    var instructors = (IEnumerable<SelectListItem>)ViewBag.Instructors;
 }
 
-@Html.SelectItem(x => x.InstructorID, instructors)
+@Html.SelectItem(x => x.InstructorID, "instructors")
 @Html.EditItem(x => x.Location)
 @Html.EditItem(x => x.Description)
 @Html.EditItem(x => x.ValidFrom)
