--- a/Soft/Views/Students/Index.cshtml
+++ b/Soft/Views/Students/Index.cshtml
@@ -11,7 +11,7 @@
         {x => x.ID},
         {x => x.FirstName},
         {x => x.Name},
-        {x => EnumHelper.GetDescription(x.Gender)},
+        {x => x.Gender},
         {x => x.EnrollmentDate},
         {x => x.Code},
         {x => x.Description},
