--- a/Soft/Views/CourseAssignments/Edit.cshtml
+++ b/Soft/Views/CourseAssignments/Edit.cshtml
@@ -9,4 +9,4 @@
 <input type="hidden" asp-for="ID" />
 @Html.ViewItem(x => x.ID)
 
-<partial name="_EditCourseAssignment" model="@Model" />
+<partial name="_EditCourseAssignments" model="@Model" />
