--- a/Soft/Views/Courses/Edit.cshtml
+++ b/Soft/Views/Courses/Edit.cshtml
@@ -9,4 +9,4 @@
 <input type="hidden" asp-for="ID" />
 @Html.ViewItem(x => x.ID)
 
-<partial name="_EditCourse" model="@Model" />
+<partial name="_EditCourses" model="@Model" />
