--- a/Soft/Views/Enrollments/Edit.cshtml
+++ b/Soft/Views/Enrollments/Edit.cshtml
@@ -8,4 +8,4 @@
 <input type="hidden" asp-for="ID" />
 @Html.ViewItem(x => x.ID)
 
-<partial name="_EditEnrollment" model="@Model" />
+<partial name="_EditEnrollments" model="@Model" />
