--- a/Soft/Views/Parents/_EditParents.cshtml
+++ b/Soft/Views/Parents/_EditParents.cshtml
@@ -11,7 +11,7 @@
 @Html.EditItem(x => x.FirstName)
 @Html.EditItem(x => x.Name)
 @Html.SelectItem(x => x.Gender, genders)
-@Html.EditItem(x => x.PhoneNr)
+@Html.EditPhoneNr(x => x.PhoneNr)
 @Html.EditItem(x => x.Code)
 @Html.EditItem(x => x.Description)
 @Html.EditItem(x => x.ValidFrom)
