--- a/Soft/Views/Shared/_Details.cshtml
+++ b/Soft/Views/Shared/_Details.cshtml
@@ -14,5 +14,5 @@
     @RenderBody()
 </dl>
 
-<a asp-action="Edit" asp-route-id="@ViewData[Datas.ItemID]">@Texts.Edit</a> |
-<a asp-action="Index">@Texts.BackToList</a>
+@*<a asp-action="Edit" asp-route-id="@ViewData[Datas.ItemID]">@Texts.Edit</a> |
+*@<a asp-action="Index">@Texts.BackToList</a>
