--- a/Soft/Views/Parents/_ViewParents.cshtml
+++ b/Soft/Views/Parents/_ViewParents.cshtml
@@ -19,25 +19,24 @@
 @Html.ViewItem(x => x.ValidTo)
 @Html.ViewImage(x => x.PhotoView, 100)
 
-@*<dt class="col-sm-2">
-	@Html.DisplayNameFor(m => m.Enrollments)
+<dt class="col-sm-2">
+	@Html.DisplayNameFor(m => m.Relationships)
 </dt>
 <dd class="col-sm-10">
 	<table class="table">
 		<tr>
-			<th>Course Title</th>
-			<th>Grade</th>
+			<th>Kid</th>
+			<th>Enrollment Date</th>
 		</tr>
-		@foreach (var item in Model.Enrollments)
-		{
+		@foreach (var item in Model.Relationships) {
 			<tr>
 				<td>
-					@Html.DisplayFor(modelItem => item.Name)
+					@Html.DisplayFor(modelItem => item.FullName)
 				</td>
 				<td>
-					@Html.DisplayFor(modelItem => item.Grade)
+					@Html.DisplayFor(modelItem => item.EnrollmentDate)
 				</td>
 			</tr>
 		}
 	</table>
-</dd>*@
+</dd>
